--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <span class="property-tag">Education</span>
                     <span class="property-tag">Civic</span>
                     <span class="property-tag">Retail</span>
+                    <span class="property-tag">Events</span>
                 </div>
 
                 <div class="cta-container">
@@ -92,6 +93,38 @@
                             <img src="assets/pr/blockster-logo.webp" alt="Blockster">
                         </a>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Numbers/Market Section -->
+    <section class="numbers-section">
+        <div class="container">
+            <div class="numbers-header">
+                <h2 class="numbers-title">Managed Property</h2>
+                <p class="numbers-subtitle">Managed property encompasses a vast ecosystem of stakeholders - from developers and construction firms to operators, residents, and communities. Voi is building the infrastructure to connect and empower this entire network.</p>
+            </div>
+
+            <div class="stats-grid">
+                <div class="stat-item">
+                    <div class="stat-number">$20T</div>
+                    <p class="stat-description">Global managed property market value, spanning commercial, residential, and institutional sectors</p>
+                </div>
+
+                <div class="stat-item">
+                    <div class="stat-number">85%</div>
+                    <p class="stat-description">Of property stakeholders identify digital transformation as a key priority for 2024-2025</p>
+                </div>
+
+                <div class="stat-item">
+                    <div class="stat-number">$12B</div>
+                    <p class="stat-description">Annual investment in property technology solutions across the development and management lifecycle</p>
+                </div>
+
+                <div class="stat-item">
+                    <div class="stat-number">50M+</div>
+                    <p class="stat-description">Daily interactions between property stakeholders that could be enhanced through blockchain technology</p>
                 </div>
             </div>
         </div>
@@ -229,6 +262,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class="carousel-slide">
+                        <div class="case-study-card">
+                            <div class="case-study-image-container">
+                                <div class="image-overlay"></div>
+                                <h3 class="case-study-title">Events</h3>
+                                <img src="assets/use-cases/stadium.jpg" alt="Retail" class="case-study-image">
+                            </div>
+                            <div class="case-study-content">
+                                <p class="case-study-quote">Revolutionizing event ticketing with NFT-based tickets, enabling secure transfers, preventing fraud, and creating new revenue streams through programmable royalties and digital collectibles.</p>
+                                <p class="case-study-alt">Ticketing</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="carousel-navigation">
                     <button class="carousel-button prev" aria-label="Previous slide">
@@ -276,84 +322,105 @@
         </div>
     </div>
 
-    <!-- Numbers Section -->
-    <section class="numbers-section">
-        <div class="container">
-            <h2 class="numbers-title">The Market</h2>
-            <p class="numbers-subtitle">The built environment represents a massive opportunity for blockchain innovation
-                across residential, commercial, and institutional sectors</p>
-
-            <div class="stats-grid">
-                <div class="stat-item">
-                    <div class="stat-number">$30T</div>
-                    <p class="stat-description">Total value of institutional buildings and infrastructure globally</p>
-                </div>
-
-                <div class="stat-item">
-                    <div class="stat-number">$1T</div>
-                    <p class="stat-description">Annual revenue from operations across all built environment sectors</p>
-                </div>
-
-                <div class="stat-item">
-                    <div class="stat-number">8.5B</div>
-                    <p class="stat-description">Square meters of built space globally requiring operational solutions
-                    </p>
-                </div>
-
-                <div class="stat-item">
-                    <div class="stat-number">75%</div>
-                    <p class="stat-description">Of property operators cite operational inefficiencies as their biggest
-                        challenge</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Why Voi Section -->
     <section class="why-voi-section">
         <div class="container">
             <h2 class="section-title">Why Voi?</h2>
-            <p class="section-subtitle">Purpose-built blockchain infrastructure for the future of property management
-            </p>
+            <p class="section-subtitle">A truly decentralized, infinitely scalable ecosystem processing 10,000+ transactions per second with instant finality and quantum-secure protection - purpose-built for the managed property ecosystem.</p>
 
             <div class="features-grid">
                 <div class="feature-item">
                     <div class="feature-number">01</div>
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                            <path d="M12 3a9 9 0 0 1 9 9M12 3a9 9 0 0 0-9 9"/>
+                            <circle cx="12" cy="12" r="3"/>
+                            <path d="M12 3v6M3 12h6M15 12h6"/>
+                        </svg>
+                    </div>
                     <div class="feature-content">
-                        <h3 class="feature-title">Built for Scale</h3>
-                        <p class="feature-description">Engineered to handle millions of daily operations across large
-                            property portfolios. From rent collection to maintenance requests, Voi's infrastructure
-                            manages high transaction volumes with minimal cost.</p>
+                        <h3 class="feature-title">Truly Decentralized</h3>
+                        <p class="feature-description">Owned and operated by its community without compromise, ensuring genuine decentralization and alignment with user needs.</p>
                     </div>
                 </div>
 
                 <div class="feature-item">
                     <div class="feature-number">02</div>
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                            <path d="M4 19l5-5"/>
+                            <path d="M15 19l5-5"/>
+                            <path d="M9.5 14L12 4l2.5 10"/>
+                            <path d="M4 19h16"/>
+                        </svg>
+                    </div>
                     <div class="feature-content">
-                        <h3 class="feature-title">Property-First Design</h3>
-                        <p class="feature-description">Native support for property-specific smart contracts, multi-party
-                            agreements, and automated compliance - built specifically for the complexities of managed
-                            property operations.</p>
+                        <h3 class="feature-title">Infinite Scalability</h3>
+                        <p class="feature-description">Process over 10,000 transactions per second with instant finality, scaling seamlessly to support growing managed property operations.</p>
                     </div>
                 </div>
 
                 <div class="feature-item">
                     <div class="feature-number">03</div>
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                            <rect x="3" y="3" width="7" height="7"/>
+                            <rect x="14" y="3" width="7" height="7"/>
+                            <rect x="3" y="14" width="7" height="7"/>
+                            <rect x="14" y="14" width="7" height="7"/>
+                            <path d="M10 7h4M7 10v4M17 10v4"/>
+                        </svg>
+                    </div>
                     <div class="feature-content">
-                        <h3 class="feature-title">Enterprise Ready</h3>
-                        <p class="feature-description">Designed to integrate seamlessly with existing property
-                            management systems while providing the benefits of blockchain technology - ensuring minimal
-                            disruption to current operations.</p>
+                        <h3 class="feature-title">Flexible Solutions</h3>
+                        <p class="feature-description">Adaptable frameworks that support everything from simple property records to complex smart building systems.</p>
                     </div>
                 </div>
 
                 <div class="feature-item">
                     <div class="feature-number">04</div>
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                            <path d="M12 3v3M3 12h3M21 12h-3M12 21v-3"/>
+                            <path d="M12 7v10M7 12h10"/>
+                            <circle cx="12" cy="12" r="9"/>
+                            <path d="M16 8l-8 8M8 8l8 8"/>
+                        </svg>
+                    </div>
                     <div class="feature-content">
-                        <h3 class="feature-title">Cost Effective</h3>
-                        <p class="feature-description">Low transaction fees and efficient consensus mechanism make Voi
-                            practical for daily property operations, from small residential complexes to large
-                            commercial portfolios.</p>
+                        <h3 class="feature-title">Future-Proof Security</h3>
+                        <p class="feature-description">Quantum-secure architecture ensures your operations remain protected against emerging threats.</p>
+                    </div>
+                </div>
+
+                <div class="feature-item">
+                    <div class="feature-number">05</div>
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                            <path d="M12 3v18"/>
+                            <path d="M5 7l7-4 7 4"/>
+                            <path d="M5 12l7-4 7 4"/>
+                            <path d="M5 17l7-4 7 4"/>
+                        </svg>
+                    </div>
+                    <div class="feature-content">
+                        <h3 class="feature-title">Cost-Effective</h3>
+                        <p class="feature-description">Low operational costs that scale efficiently with your needs, from individual properties to global infrastructure.</p>
+                    </div>
+                </div>
+
+                <div class="feature-item">
+                    <div class="feature-number">06</div>
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                            <rect x="4" y="8" width="16" height="12" rx="1"/>
+                            <path d="M8 8V5c0-1 1-2 2-2h4c1 0 2 1 2 2v3"/>
+                            <path d="M12 14v2"/>
+                        </svg>
+                    </div>
+                    <div class="feature-content">
+                        <h3 class="feature-title">Simple to Use</h3>
+                        <p class="feature-description">Familiar interfaces that integrate seamlessly with existing tools, with no technical expertise required.</p>
                     </div>
                 </div>
             </div>
