--- a/index.html
+++ b/index.html
@@ -301,12 +301,7 @@
                             <path d="M15 18l-6-6 6-6" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
                     </button>
-                    <div class="carousel-dots" role="tablist" aria-label="Select slide">
-                        <button class="carousel-dot active" role="tab" aria-selected="true"
-                            aria-label="Slide 1"></button>
-                        <button class="carousel-dot" role="tab" aria-selected="false" aria-label="Slide 2"></button>
-                        <button class="carousel-dot" role="tab" aria-selected="false" aria-label="Slide 3"></button>
-                    </div>
+                    <div class="carousel-dots" role="tablist" aria-label="Select slide"></div>
                     <button class="carousel-button next" aria-label="Next slide">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
                             <path d="M9 6l6 6-6 6" stroke-linecap="round" stroke-linejoin="round" />
@@ -588,11 +583,6 @@
             <!-- Footer Bottom -->
             <div class="footer-bottom">
                 <div class="copyright">© 2024 Voi Foundation</div>
-                <div class="footer-bottom-links">
-                    <a href="#" class="footer-link">Privacy Policy</a>
-                    <span class="footer-divider">•</span>
-                    <a href="#" class="footer-link">Privacy Settings</a>
-                </div>
             </div>
         </div>
     </footer>
