--- a/index.html
+++ b/index.html
@@ -141,9 +141,7 @@
         <div class="use-cases-content">
             <div class="use-cases-header">
                 <h2 class="use-cases-title">The Future</h2>
-                <p class="use-cases-subtitle">Voi's blockchain infrastructure enables secure, efficient solutions for
-                    residential and commercial properties, automating operations and connecting stakeholders in
-                    innovative ways.</p>
+                <p class="use-cases-subtitle">Voi empowers managed property stakeholders - from residents and businesses to service providers and managers - to connect, collaborate, and create value through a unified blockchain ecosystem.</p>
             </div>
             <div class="carousel-container" role="region" aria-label="Use cases carousel">
                 <div class="carousel-track">
@@ -237,7 +235,7 @@
                                     loading="lazy">
                             </div>
                             <div class="case-study-content">
-                                <p class="case-study-quote"> Verifiable credentials and certificates issued on Voi,
+                                <p class="case-study-quote">Verifiable credentials and certificates issued on Voi,
                                     allowing for secure and tamper-proof verification of educational
                                     qualifications.
                                 </p>
@@ -283,7 +281,7 @@
                             <div class="case-study-image-container">
                                 <div class="image-overlay"></div>
                                 <h3 class="case-study-title">Events</h3>
-                                <img src="assets/use-cases/stadium.jpg" alt="Retail" class="case-study-image"
+                                <img src="assets/use-cases/stadium.jpg" alt="Stadium" class="case-study-image"
                                     loading="lazy">
                             </div>
                             <div class="case-study-content">
@@ -374,7 +372,7 @@
                     </div>
                     <div class="feature-content">
                         <h3 class="feature-title">Infinite Scalability</h3>
-                        <p class="feature-description">Process over 10,000 transactions per second with instant
+                        <p class="feature-description">Voi can process over 10,000 transactions per second with instant
                             finality, scaling seamlessly to support growing managed property operations.</p>
                     </div>
                 </div>
