Added in new PR piece

--- a/index.html
+++ b/index.html
@@ -92,6 +92,9 @@
                             href="https://blockster.com/voi-network-benedict-dixons-vision-for-a-user-centric-layer-1-blockchain">
                             <img src="assets/pr/blockster-logo.webp" alt="Blockster">
                         </a>
+                        <a href="https://crypto.news/voi-network-to-empower-the-future-of-the-20t-managed-property-ecosystem/">
+                            <img src="assets/pr/cryptonews.svg" alt="Crypto.news">
+                        </a>
                     </div>
                 </div>
             </div>
